# LC3b

./: .gdbinit  .gitignore  .gitpod.yml  CMakeLists.txt  README.md
.theia/: launch.json  settings.json  tasks.json
doc/: control_store.xlsx
doc/test/: example.asm  lc3b_assembler.py  program_assembly.rtf  simple_example.asm  test_program.asm  ucode  ucode6.txt  ucode6_new
include/: BitField.h  Disassembler.h  LC3b.h  Latch.h  MainMemory.h  MicroSequencer.h  OperationUnit.h  PipeLine.h  Simulator.h  State.h  instruction.h
source/: CMakeLists.txt  Disassembler.cpp  LC3b.cpp  Latch.cpp  MainMemory.cpp  MicroSequencer.cpp  OperationUnit.cpp  PipeLine.cpp  Simulator.cpp  State.cpp  instruction.cpp
